src/containers/CaseStudy/CaseStudy.scss
@import '../../styles/variables.scss';

.casestudy {
  background: $case-study-bg;
}

.casestudy__block {
  margin-top: $variable-spacing-lg;
  opacity: 0;
  transform: translateY(50px);
  transition: $anim-slow opacity $ease-decel, $anim-slow transform $ease-decel;

  &.-active {
    opacity: 1;
    transform: translateY(0);
  }
}

.casestudy__body {
  position: relative;
  z-index: 30;
  padding-bottom: $variable-spacing-lg;
}

